# dotfiles

./: .bash_aliases  .bashrc  .gitconfig  .gitignore  .gitmodules  .profile  .tmux.conf  .zprofile  CONTEXT.md  README.md  desktop_cheatsheet.sh  install  install.sh  justfile  makefile  set-defaults.sh  stow-target.sh
.config/: foot  gammastep  nvim  sway
bash/: .bash_aliases  .bashrc
fzf/: config
git/: .gitconfig
install/: 10-install-cli.sh  10-install-terminal.sh  11-install-tpm.sh  12-setup-pass-store-sudo.sh  20-install-desktop.sh  20-install-dev.sh  21-configure-sway-desktop.sh  22-setup-ly.sh  23-nvidia-driver-picker.sh  30-install-yay.sh  31-install-aur.sh  40-enable-systemd-services.sh  41-setup-timesyncd.sh  50-stow-dotfiles.sh  50-stow-system.sh  51-stow-device-dotfiles.sh  51-stow-device.sh  52-init-nvim.sh  60-configure-sway-desktop.sh  61-create-sway-config-dir.sh  70-setup-pass-store-chmod.sh  check-tools-package.sh  common.sh  export-thememanager.sh  git-tools.sh  git-tools.test.sh  install-tools.sh  install.sh  lib.sh  lint-packages.sh  packages.sh  tool-source.sh  tool-source.test.sh  tool-status.sh  unlink.sh  vendor-thememanager.sh  verify-tools.sh
kmonad/: laptop.kbd
scripts/: nvidia-driver-picker.sh  (+2 more)
tools/thememanager/: CHANGELOG.md  README.md  VENDORED_FROM  justfile  pyproject.toml
tools/thememanager/src/: thememanager.py
tools/thememanager/src/color256/: __init__.py  theme.nvim.lua
tools/thememanager/src/color256/themes/: baseline.dark.txt  kanagawa.dark.txt  rosepine.dark.txt
tools/thememanager/tests/: test_thememanager.py
(+520 files in other folders)
